--- a/blender_manifest.toml
+++ b/blender_manifest.toml
@@ -1,9 +1,9 @@
 schema_version = "1.0.0"
 
 id = "node_quick_maths"
-version = "1.0.2"
+version = "1.0.3"
 name = "Node Quick Maths"
-tagline = "A fast way to make long math chains in Shader nodes"
+tagline = "A fast way to make long math chains in node editors"
 maintainer = "Erin MacDonald <zeptofine@gmail.com>"
 type = "add-on"
 
